--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,23 +4,40 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        release {
+            storeFile file('E:\\Development\\uuattendance.jks')
+            storePassword 'uuattendance'
+            keyAlias 'key0'
+            keyPassword 'uuattendance'
+        }
+    }
     namespace 'com.uu.attendance'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.uu.attendance"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        ndk {
+            //noinspection ChromeOsAbiSupport
+            abiFilters "arm64-v8a"
+        }
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+        }
+        debug {
+            signingConfig signingConfigs.release
         }
     }
     compileOptions {
@@ -53,4 +70,12 @@ dependencies {
 
     implementation 'com.geyifeng.immersionbar:immersionbar:3.2.2'
     implementation 'com.geyifeng.immersionbar:immersionbar-ktx:3.2.2'
+
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+//    implementation 'com.amap.api:location:6.3.0'
+    implementation 'com.amap.api:3dmap:latest.integration'
+
+    implementation 'com.github.getActivity:XXPermissions:18.2'
+
+    implementation 'com.github.getActivity:Toaster:12.3'
 }
