督导详情基本完成，接入leakcanary，修复Fragment内存泄漏

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,8 @@ dependencies {
     implementation 'com.github.getActivity:Toaster:12.3'
 
     implementation 'io.github.razerdp:BasePopup:3.2.1'
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.12'
+
+    //implementation 'me.hiten:jkcardlayout:0.1.1'
 }
