--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,40 +50,44 @@ android {
     }
     buildFeatures {
         viewBinding true
-    }
-    dataBinding {
-        enabled = true
+        dataBinding true
+        buildConfig true
     }
 }
 
 dependencies {
 
+    // core
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    // test
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    // network
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
+
+    // ui
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.github.DylanCaiCoding.ViewBindingKTX:viewbinding-ktx:2.1.0'
     implementation 'com.github.DylanCaiCoding.ViewBindingKTX:viewbinding-base:2.1.0'
-
+    implementation 'com.github.getActivity:Toaster:12.3'
+    implementation 'io.github.razerdp:BasePopup:3.2.1'
     implementation 'com.geyifeng.immersionbar:immersionbar:3.2.2'
     implementation 'com.geyifeng.immersionbar:immersionbar-ktx:3.2.2'
 
-    implementation 'com.geyifeng.immersionbar:immersionbar:3.2.2'
-    implementation 'com.geyifeng.immersionbar:immersionbar-ktx:3.2.2'
+    // data
+    implementation 'com.tencent:mmkv:1.3.1'
 
+    // others
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.amap.api:3dmap:latest.integration'
-
     implementation 'com.github.getActivity:XXPermissions:18.2'
-
-    implementation 'com.github.getActivity:Toaster:12.3'
-
-    implementation 'io.github.razerdp:BasePopup:3.2.1'
-
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.12'
 
     //implementation 'me.hiten:jkcardlayout:0.1.1'
