--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UU考勤"
-        tools:targetApi="31">
+        android:usesCleartextTraffic="true"
+        tools:targetApi="34">
         <activity
             android:name=".ui.activity.SuperviseDetailActivity"
             android:exported="false" />
@@ -37,7 +38,8 @@
             android:exported="false" />
         <activity
             android:name=".ui.activity.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
