--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,19 +23,19 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="34">
         <activity
-            android:name=".ui.activity.ChangePwdActivity"
+            android:name=".ui.me.activity.ChangePwdActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.activity.NewLeaveApplicationActivity"
+            android:name=".ui.coursetable.activity.NewLeaveApplicationActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.activity.AttendanceAppealActivity"
+            android:name=".ui.me.activity.AttendanceAppealActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.activity.LeaveApplicationActivity"
+            android:name=".ui.me.activity.LeaveApplicationActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.activity.SuperviseDetailActivity"
+            android:name=".ui.supervise.activity.SuperviseDetailActivity"
             android:exported="false" />
 
         <meta-data
@@ -43,13 +43,13 @@
             android:value="cf0d94d8e27893bec7ea67db8fd643f1" />
 
         <activity
-            android:name=".ui.activity.RulesActivity"
+            android:name=".ui.me.activity.RulesActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.activity.LoginActivity"
+            android:name=".ui.login.activity.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.activity.MainActivity"
+            android:name=".ui.main.activity.MainActivity"
             android:exported="true"
             android:launchMode="singleTask">
             <intent-filter>
